--- a/StagePipeline/Jenkinsfile
+++ b/StagePipeline/Jenkinsfile
@@ -49,51 +49,51 @@ pipeline {
                 sh 'mvn -s settings.xml checkstyle:checkstyle'
             }
         }
-    //     stage('CODE ANALYSIS with SONARQUBE') {
+        stage('CODE ANALYSIS with SONARQUBE') {
           
-	// 	  environment {
-    //          scannerHome = tool "${SONARSCANNER}"
-    //       }
+		  environment {
+             scannerHome = tool "${SONARSCANNER}"
+          }
 
-    //       steps {
-    //         withSonarQubeEnv("$SONARSERVER") {
-    //            sh '''${scannerHome}/bin/sonar-scanner -Dsonar.projectKey=vprofile \
-    //                -Dsonar.projectName=vprofile \
-    //                -Dsonar.projectVersion=1.0 \
-    //                -Dsonar.sources=src/ \
-    //                -Dsonar.java.binaries=target/test-classes/com/visualpathit/account/controllerTest/ \
-    //                -Dsonar.junit.reportsPath=target/surefire-reports/ \
-    //                -Dsonar.jacoco.reportsPath=target/jacoco.exec \
-    //                -Dsonar.java.checkstyle.reportPaths=target/checkstyle-result.xml'''
-    //         }
-    //       }
-    //     }
-    //     stage('quality gate'){
-    //         steps {       
-    //         timeout(time: 10, unit: 'MINUTES') {
-    //            waitForQualityGate abortPipeline: true
-    //         }
-    //     }
-    // }
-    //     stage('uploadartifact'){
-    //         steps{
-    //     nexusArtifactUploader(
-    //     nexusVersion: 'nexus3',
-    //     protocol: 'http',
-    //     nexusUrl: "${NEXUSIP}:${NEXUSPORT}",
-    //     groupId: 'QA',
-    //     version: "${env.BUILD_ID}-${env.BUILD_TIMESTAMP}",
-    //     repository: "${RELEASE_REPO}",
-    //     credentialsId: "${NEXUS_LOGIN}",
-    //     artifacts: [
-    //         [artifactId: 'vproapp',
-    //          classifier: '',
-    //          file: 'target/vprofile-v2.war',
-    //          type: 'war']
-    //     ]
-    //  )
-    //         }
-    //     }
+          steps {
+            withSonarQubeEnv("$SONARSERVER") {
+               sh '''${scannerHome}/bin/sonar-scanner -Dsonar.projectKey=vprofile \
+                   -Dsonar.projectName=vprofile \
+                   -Dsonar.projectVersion=1.0 \
+                   -Dsonar.sources=src/ \
+                   -Dsonar.java.binaries=target/test-classes/com/visualpathit/account/controllerTest/ \
+                   -Dsonar.junit.reportsPath=target/surefire-reports/ \
+                   -Dsonar.jacoco.reportsPath=target/jacoco.exec \
+                   -Dsonar.java.checkstyle.reportPaths=target/checkstyle-result.xml'''
+            }
+          }
+        }
+        stage('quality gate'){
+            steps {       
+            timeout(time: 10, unit: 'MINUTES') {
+               waitForQualityGate abortPipeline: true
+            }
+        }
+    }
+        stage('uploadartifact'){
+            steps{
+        nexusArtifactUploader(
+        nexusVersion: 'nexus3',
+        protocol: 'http',
+        nexusUrl: "${NEXUSIP}:${NEXUSPORT}",
+        groupId: 'QA',
+        version: "${env.BUILD_ID}-${env.BUILD_TIMESTAMP}",
+        repository: "${RELEASE_REPO}",
+        credentialsId: "${NEXUS_LOGIN}",
+        artifacts: [
+            [artifactId: 'vproapp',
+             classifier: '',
+             file: 'target/vprofile-v2.war',
+             type: 'war']
+        ]
+     )
+            }
+        }
         stage('build app image') {
             steps {
                 script {
