--- a/ProdPipeline/Jenkinsfile
+++ b/ProdPipeline/Jenkinsfile
@@ -9,86 +9,19 @@ pipeline {
         jdk "OracleJDK8"
     }
     environment {
-        SNAP_REPO = 'vprofile-snapshot'
-        NEXUS_USER = 'admin'
-        NEXUS_PASS = 'password'
-        RELEASE_REPO = 'vprofile-release'
-        CENTRAL_REPO = 'vpro-maven-central'
-        NEXUSIP = '172.31.83.79'
-        NEXUSPORT = '8081'
-        NEXUS_GRP_REPO = 'vpro-maven-group'
-        NEXUS_LOGIN = 'nexuslogin'   
-        SONARSERVER = 'sonarserver'
-        SONARSCANNER = 'sonarscanner' 
+        registryCredential = 'ecr:us-east-1:awscreds'
+        appRegistry = '339302806659.dkr.ecr.us-east-1.amazonaws.com/vprofileappimg'
+        vprofileRegistry = 'https://339302806659.dkr.ecr.us-east-1.amazonaws.com'
+        cluster = 'vprprod'
+        service = 'vproappprodsvc'
     }
 
     stages {
-        stage('Build'){
+        stage('deploy to prod ecs') {
             steps {
-            sh 'mvn -s settings.xml -DskipTests install'
-            }
-            post {
-                success {
-                    echo "Now Archiving."
-                    archiveArtifacts artifacts: '**/*.war'
+                withAWS(credentials: 'awscreds', region: 'us-east-1') {
+                    sh 'aws ecs update-service --cluster ${cluster} --service ${service} --force-new-deployment'
                 }
-            }
-        }
-
-        stage('Test'){
-            steps {
-                sh 'mvn -s settings.xml test'
-            }
-        }
-
-        stage('checkstyle analysis'){
-            steps {
-                sh 'mvn -s settings.xml checkstyle:checkstyle'
-            }
-        }
-        stage('CODE ANALYSIS with SONARQUBE') {
-          
-		  environment {
-             scannerHome = tool "${SONARSCANNER}"
-          }
-
-          steps {
-            withSonarQubeEnv("$SONARSERVER") {
-               sh '''${scannerHome}/bin/sonar-scanner -Dsonar.projectKey=vprofile \
-                   -Dsonar.projectName=vprofile \
-                   -Dsonar.projectVersion=1.0 \
-                   -Dsonar.sources=src/ \
-                   -Dsonar.java.binaries=target/test-classes/com/visualpathit/account/controllerTest/ \
-                   -Dsonar.junit.reportsPath=target/surefire-reports/ \
-                   -Dsonar.jacoco.reportsPath=target/jacoco.exec \
-                   -Dsonar.java.checkstyle.reportPaths=target/checkstyle-result.xml'''
-            }
-          }
-        }
-        stage('quality gate'){
-            steps {       
-            timeout(time: 10, unit: 'MINUTES') {
-               waitForQualityGate abortPipeline: true
-            }
-        }
-    }
-        stage('uploadartifact'){
-            steps{
-        nexusArtifactUploader(
-        nexusVersion: 'nexus3',
-        protocol: 'http',
-        nexusUrl: "${NEXUSIP}:${NEXUSPORT}",
-        groupId: 'QA',
-        version: "${env.BUILD_ID}-${env.BUILD_TIMESTAMP}",
-        repository: "${RELEASE_REPO}",
-        credentialsId: "${NEXUS_LOGIN}",
-        artifacts: [
-            [artifactId: 'vproapp',
-             classifier: '',
-             file: 'target/vprofile-v2.war',
-             type: 'war']
-        ]
-     )
             }
         }
     }
